Generify.